[tool.poetry]
name = "VulnerabilityLookupSighting"
version = "0.4.1"
description = "A client that retrieves vulnerability observations from a MISP server and pushes them to a Vulnerability Lookup instance."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"

homepage = "https://github.com/MISP/VulnerabilityLookupSighting"
repository = "https://github.com/MISP/VulnerabilityLookupSighting"

keywords = ["vulnerability", "cve", "sighting", "observations", "MISP", "PyVulnerabilityLookup"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]


[tool.poetry.scripts]
VulnerabilityLookupSighting = "vulnerabilitylookupsighting.publish:main"


[tool.poetry.dependencies]
python = "^3.10"
pymisp = "^2.5.2"
pyvulnerabilitylookup = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs"

[tool.isort]
profile = "black"
